--- a/index.html
+++ b/index.html
@@ -18,25 +18,23 @@
         <button id="close" class="control-btn close">✕</button>
       </div>
     </header>
+    
 <nav class="menu-bar">
-      <div class="menu-item-container">
-        <button class="menu-btn">Archivo</button>
-        <div class="menu-dropdown">
-          <button>Nuevo Perfil</button>
-          <button>Ajustes</button>
-          <hr>
-          <button id="menu-exit">Salir</button>
-        </div>
-      </div>
+  <div class="menu-item-container">
+    <button class="menu-btn">Perfil</button>
+    <div class="menu-dropdown">
+      <button>Ajustes</button>
+    </div>
+  </div>
 
-      <div class="menu-item-container">
-        <button class="menu-btn">Editar</button>
-        <div class="menu-dropdown">
-          <button>Deshacer</button>
-          <button>Copiar</button>
-        </div>
-      </div>
-    </nav>
+<div class="menu-item-container">
+    <button class="menu-btn">Workshop</button>
+    <div class="menu-dropdown">
+      <button>Explorar</button>
+      <button>Mis Diseños</button>
+    </div>
+  </div>
+</nav>
     <main class="main-content">
       <h1>Hello World!</h1>
       <p>Welcome to your Electron application.</p>
