probando y aprendiendo arquitectura

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="es-CL">
   <head>
     <meta charset="UTF-8" />
     <title>Zora Deck</title>
@@ -19,25 +19,37 @@
       </div>
     </header>
     
-<nav class="menu-bar">
-  <div class="menu-item-container">
-    <button class="menu-btn">Perfil</button>
-    <div class="menu-dropdown">
-      <button>Ajustes</button>
-    </div>
-  </div>
+    <nav class="menu-bar">
+      <div class="menu-item-container">
+        <button class="menu-btn">Perfil</button>
+        <div class="menu-dropdown">
+          <button>Ajustes</button>
+        </div>
+      </div>
 
-<div class="menu-item-container">
-    <button class="menu-btn">Workshop</button>
-    <div class="menu-dropdown">
-      <button>Explorar</button>
-      <button>Mis Diseños</button>
+      <div class="menu-item-container">
+        <button class="menu-btn">Workshop</button>
+        <div class="menu-dropdown">
+          <button>Explorar</button>
+          <button>Mis Diseños</button>
+        </div>
+      </div>
+    </nav>
+
+    <div class="option-container" hidden>
+      <button id="menu-exit" class="option-btn">Salir</button>
     </div>
-  </div>
-</nav>
+
+    <!-- Crear Sidebar como prueba -->
+
     <main class="main-content">
       <h1>Hello World!</h1>
       <p>Welcome to your Electron application.</p>
+      
+      <!-- Crear Botón bloque de prueba -->
+      <div class="button-container">
+        <button class="custom-button">Botón de Prueba</button>
+      </div>
     </main>
 
     <script type="module" src="/src/renderer.js"></script>
