Creando y probando botones personalizados

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <p>Welcome to your Electron application.</p>
       
       <!-- Crear Botón bloque de prueba -->
-      <div class="button-container">
-        <button class="custom-button">Botón de Prueba</button>
+      <div class="button-container" role="button" tabindex="0">
+        <p>THIS IS A BUTTON</p>
       </div>
     </main>
 
