Creación botón conexión a Twitch, y se crea funciones placeholder en preload, render y main

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       <div class="button-container" role="button" tabindex="0">
         <p>THIS IS A BUTTON</p>
       </div>
+
+      <div class="button-container twitch" role="button" tabindex="0">
+        <p>Conectar a Twitch</p>
+      </div>
     </main>
 
     <script type="module" src="/src/renderer.js"></script>
